@@ -6,31 +6,28 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.modelmapper.ModelMapper;
 import org.nicetu.spb.productservice.exception.wrapper.CategoryNotFoundException;
 import org.nicetu.spb.productservice.model.dto.CategoryDto;
 import org.nicetu.spb.productservice.model.entity.Category;
 import org.nicetu.spb.productservice.repository.CategoryRepository;
-import org.nicetu.spb.productservice.repository.CategoryRepositoryPagingAndSorting;
+import org.nicetu.spb.productservice.repository.ProductCategoryRepository;
 import org.nicetu.spb.productservice.service.impl.CategoryServiceImpl;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.transaction.reactive.TransactionalOperator;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+import reactor.test.StepVerifier;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.doNothing;
 
 @ExtendWith(MockitoExtension.class)
 class CategoryServiceImplTest {
@@ -39,135 +36,162 @@ class CategoryServiceImplTest {
     private CategoryRepository categoryRepository;
 
     @Mock
-    private CategoryRepositoryPagingAndSorting categoryRepositoryPagingAndSorting;
+    private ProductCategoryRepository productCategoryRepository;
 
     @Mock
-    private ModelMapper modelMapper;
+    private TransactionalOperator transactionalOperator;
 
     @InjectMocks
     private CategoryServiceImpl categoryService;
 
-    private Category category;
-    private CategoryDto categoryDto;
+    private CategoryDto testCategoryDto;
+    private Category testCategory;
 
     @BeforeEach
     void setUp() {
-        category = Category.builder()
+        testCategoryDto = CategoryDto.builder()
                 .categoryId(1)
                 .categoryTitle("Electronics")
                 .build();
 
-        categoryDto = CategoryDto.builder()
+        testCategory = Category.builder()
                 .categoryId(1)
                 .categoryTitle("Electronics")
                 .build();
     }
 
     @Test
-    void findAll_ShouldReturnFluxOfCategoryDtos() {
-        when(categoryRepository.findAll()).thenReturn(Arrays.asList(category));
+    void findById_shouldReturnCategoryWhenExists() {
+        when(categoryRepository.findById(1)).thenReturn(Mono.just(testCategory));
+        when(categoryRepository.findByParentCategoryId(anyInt())).thenReturn(Flux.empty());
+        when(productCategoryRepository.findProductIdsByCategoryId(anyInt())).thenReturn(Flux.empty());
 
-        var result = categoryService.findAll();
+        Mono<CategoryDto> result = categoryService.findById(1);
 
-        assertNotNull(result);
-        verify(categoryRepository).findAll();
+        StepVerifier.create(result)
+                .assertNext(category -> {
+                    assertThat(category.getCategoryId()).isEqualTo(1);
+                    assertThat(category.getCategoryTitle()).isEqualTo("Electronics");
+                })
+                .verifyComplete();
+
+        verify(categoryRepository).findById(1);
     }
 
     @Test
-    void findAllCategory_ShouldReturnPageOfCategoryDtos() {
+    void findById_shouldThrowExceptionWhenNotFound() {
+        when(categoryRepository.findById(999)).thenReturn(Mono.empty());
+
+        Mono<CategoryDto> result = categoryService.findById(999);
+
+        StepVerifier.create(result)
+                .expectErrorMatches(throwable ->
+                        throwable instanceof CategoryNotFoundException &&
+                                throwable.getMessage().contains("Category not found"))
+                .verify();
+
+        verify(categoryRepository).findById(999);
+    }
+
+    @Test
+    void findAllCategory_shouldReturnPagedCategories() {
         Pageable pageable = PageRequest.of(0, 10);
-        Page<Category> categoryPage = new PageImpl<>(Arrays.asList(category));
-        when(categoryRepository.findAll(pageable)).thenReturn(categoryPage);
+        List<Category> categories = List.of(testCategory);
+        Page<Category> categoryPage = new PageImpl<>(categories, pageable, 1);
 
-        Page<CategoryDto> result = categoryService.findAllCategory(0, 10);
+        when(categoryRepository.findAllBy(any(Pageable.class))).thenReturn(Flux.fromIterable(categories));
+        when(categoryRepository.count()).thenReturn(Mono.just(1L));
+        when(categoryRepository.findByParentCategoryId(anyInt())).thenReturn(Flux.empty());
+        when(productCategoryRepository.findProductIdsByCategoryId(anyInt())).thenReturn(Flux.empty());
 
-        assertNotNull(result);
-        assertEquals(1, result.getTotalElements());
-        verify(categoryRepository).findAll(pageable);
+        Mono<Page<CategoryDto>> result = categoryService.findAllCategory(0, 10);
+
+        StepVerifier.create(result)
+                .assertNext(page -> {
+                    assertThat(page.getTotalElements()).isEqualTo(1);
+                    assertThat(page.getContent()).hasSize(1);
+                    assertThat(page.getContent().get(0).getCategoryTitle()).isEqualTo("Electronics");
+                })
+                .verifyComplete();
+
+        verify(categoryRepository).findAllBy(any(Pageable.class));
+        verify(categoryRepository).count();
     }
 
     @Test
-    void getAllCategories_ShouldReturnListOfCategoryDtos() {
-        Pageable pageable = PageRequest.of(0, 10, Sort.by("categoryId"));
-        Page<Category> categoryPage = new PageImpl<>(Arrays.asList(category));
-        when(categoryRepositoryPagingAndSorting.findAllPagedAndSortedCategories(pageable))
-                .thenReturn(categoryPage);
-        when(modelMapper.map(category, CategoryDto.class)).thenReturn(categoryDto);
+    void save_shouldSaveCategorySuccessfully() {
+        when(categoryRepository.save(any(Category.class))).thenReturn(Mono.just(testCategory));
+        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> {
+            Mono<?> mono = invocation.getArgument(0);
+            return mono;
+        });
+        when(categoryRepository.findByParentCategoryId(anyInt())).thenReturn(Flux.empty());
+        when(productCategoryRepository.findProductIdsByCategoryId(anyInt())).thenReturn(Flux.empty());
 
-        List<CategoryDto> result = categoryService.getAllCategories(0, 10, "categoryId");
+        Mono<CategoryDto> result = categoryService.save(testCategoryDto);
 
-        assertNotNull(result);
-        assertFalse(result.isEmpty());
-        verify(categoryRepositoryPagingAndSorting).findAllPagedAndSortedCategories(pageable);
-    }
+        StepVerifier.create(result)
+                .assertNext(saved -> {
+                    assertThat(saved.getCategoryId()).isEqualTo(1);
+                    assertThat(saved.getCategoryTitle()).isEqualTo("Electronics");
+                })
+                .verifyComplete();
 
-    @Test
-    void findById_WhenCategoryExists_ShouldReturnCategoryDto() {
-        when(categoryRepository.findById(1)).thenReturn(Optional.of(category));
-
-        CategoryDto result = categoryService.findById(1);
-
-        assertNotNull(result);
-        verify(categoryRepository).findById(1);
-    }
-
-    @Test
-    void findById_WhenCategoryNotExists_ShouldThrowException() {
-        when(categoryRepository.findById(1)).thenReturn(Optional.empty());
-
-        assertThrows(CategoryNotFoundException.class, () -> categoryService.findById(1));
-        verify(categoryRepository).findById(1);
-    }
-
-    @Test
-    void save_ShouldReturnMonoOfCategoryDto() {
-        when(categoryRepository.save(any(Category.class))).thenReturn(category);
-
-        var resultMono = categoryService.save(categoryDto);
-        CategoryDto result = resultMono.block();
-
-        assertNotNull(result);
         verify(categoryRepository).save(any(Category.class));
     }
 
     @Test
-    void update_WhenCategoryExists_ShouldReturnUpdatedCategoryDto() {
-        when(categoryRepository.findById(1)).thenReturn(Optional.of(category));
-        when(categoryRepository.save(any(Category.class))).thenReturn(category);
+    void update_shouldUpdateCategorySuccessfully() {
+        CategoryDto updateDto = CategoryDto.builder()
+                .categoryId(1)
+                .categoryTitle("Updated Electronics")
+                .build();
 
-        CategoryDto result = categoryService.update(categoryDto);
+        Category updatedCategory = Category.builder()
+                .categoryId(1)
+                .categoryTitle("Updated Electronics")
+                .build();
 
-        assertNotNull(result);
-        verify(categoryRepository).findById(1);
-        verify(categoryRepository).save(any(Category.class));
-    }
+        when(categoryRepository.findById(1)).thenReturn(Mono.just(testCategory));
+        when(categoryRepository.save(any(Category.class))).thenReturn(Mono.just(updatedCategory));
+        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> {
+            Mono<?> mono = invocation.getArgument(0);
+            return mono;
+        });
+        when(categoryRepository.findByParentCategoryId(anyInt())).thenReturn(Flux.empty());
+        when(productCategoryRepository.findProductIdsByCategoryId(anyInt())).thenReturn(Flux.empty());
 
-    @Test
-    void update_WhenCategoryNotExists_ShouldThrowException() {
-        when(categoryRepository.findById(1)).thenReturn(Optional.empty());
+        Mono<CategoryDto> result = categoryService.update(updateDto);
 
-        assertThrows(CategoryNotFoundException.class, () -> categoryService.update(categoryDto));
-        verify(categoryRepository).findById(1);
-    }
+        StepVerifier.create(result)
+                .assertNext(updated -> {
+                    assertThat(updated.getCategoryTitle()).isEqualTo("Updated Electronics");
+                })
+                .verifyComplete();
 
-    @Test
-    void updateWithId_WhenCategoryExists_ShouldReturnUpdatedCategoryDto() {
-        when(categoryRepository.findById(1)).thenReturn(Optional.of(category));
-        when(categoryRepository.save(any(Category.class))).thenReturn(category);
-
-        CategoryDto result = categoryService.update(1, categoryDto);
-
-        assertNotNull(result);
         verify(categoryRepository).findById(1);
         verify(categoryRepository).save(any(Category.class));
     }
 
     @Test
-    void deleteById_ShouldCallRepositoryDelete() {
-        doNothing().when(categoryRepository).deleteById(1);
+    void deleteById_shouldDeleteCategorySuccessfully() {
+        when(categoryRepository.findById(1)).thenReturn(Mono.just(testCategory));
+        when(categoryRepository.hasSubcategories(1)).thenReturn(Mono.just(false));
+        when(productCategoryRepository.deleteByCategoryId(1)).thenReturn(Mono.just(1));
+        when(categoryRepository.delete(any(Category.class))).thenReturn(Mono.empty());
+        when(transactionalOperator.transactional(any(Mono.class))).thenAnswer(invocation -> {
+            Mono<?> mono = invocation.getArgument(0);
+            return mono;
+        });
 
-        categoryService.deleteById(1);
+        Mono<Void> result = categoryService.deleteById(1);
 
-        verify(categoryRepository).deleteById(1);
+        StepVerifier.create(result)
+                .verifyComplete();
+
+        verify(categoryRepository).findById(1);
+        verify(categoryRepository).hasSubcategories(1);
+        verify(productCategoryRepository).deleteByCategoryId(1);
+        verify(categoryRepository).delete(any(Category.class));
     }
 }
